need_to_do_text_preprocessing

--- a/Finance_Project/Project2.ipynb
+++ b/Finance_Project/Project2.ipynb
@@ -2060,8 +2060,260 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 66,
    "id": "c6fa544f-8c8e-417f-aeca-32b246ecf318",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>index</th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Open</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Close</th>\n",
+       "      <th>Adj Close</th>\n",
+       "      <th>Volume</th>\n",
+       "      <th>Label</th>\n",
+       "      <th>Company</th>\n",
+       "      <th>clean_title</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>2022-01-03</td>\n",
+       "      <td>177.830002</td>\n",
+       "      <td>182.880005</td>\n",
+       "      <td>177.710007</td>\n",
+       "      <td>182.009995</td>\n",
+       "      <td>179.481140</td>\n",
+       "      <td>104487900.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>what a strong apple 2022 product line up could...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2022-01-03</td>\n",
+       "      <td>382.583344</td>\n",
+       "      <td>400.356659</td>\n",
+       "      <td>378.679993</td>\n",
+       "      <td>399.926666</td>\n",
+       "      <td>399.926666</td>\n",
+       "      <td>103931400.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>lg energy solution starts taking orders for wh...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2022-01-03</td>\n",
+       "      <td>167.550003</td>\n",
+       "      <td>170.703506</td>\n",
+       "      <td>166.160507</td>\n",
+       "      <td>170.404495</td>\n",
+       "      <td>170.404495</td>\n",
+       "      <td>63520000.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>updating 2021 calls while suggesting strategic...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>3</td>\n",
+       "      <td>2022-01-04</td>\n",
+       "      <td>182.630005</td>\n",
+       "      <td>182.940002</td>\n",
+       "      <td>179.119995</td>\n",
+       "      <td>179.699997</td>\n",
+       "      <td>177.203217</td>\n",
+       "      <td>99310400.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>is 3 trillion just the beginning for apple app...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>4</td>\n",
+       "      <td>2022-01-04</td>\n",
+       "      <td>396.516663</td>\n",
+       "      <td>402.666656</td>\n",
+       "      <td>374.350006</td>\n",
+       "      <td>383.196655</td>\n",
+       "      <td>383.196655</td>\n",
+       "      <td>100248300.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>tesla opens showroom in xinjiang the chinese r...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1741</th>\n",
+       "      <td>1741</td>\n",
+       "      <td>2024-04-25</td>\n",
+       "      <td>169.529999</td>\n",
+       "      <td>170.610001</td>\n",
+       "      <td>168.149994</td>\n",
+       "      <td>169.889999</td>\n",
+       "      <td>169.659882</td>\n",
+       "      <td>50558300.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>this spectacular vanguard etf could turn 250 p...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1742</th>\n",
+       "      <td>1742</td>\n",
+       "      <td>2024-04-25</td>\n",
+       "      <td>169.679993</td>\n",
+       "      <td>173.919998</td>\n",
+       "      <td>166.320007</td>\n",
+       "      <td>173.669998</td>\n",
+       "      <td>173.669998</td>\n",
+       "      <td>49249400.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>if you invested 10000 in amazon 10 years ago t...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1743</th>\n",
+       "      <td>1743</td>\n",
+       "      <td>2024-04-26</td>\n",
+       "      <td>177.800003</td>\n",
+       "      <td>180.820007</td>\n",
+       "      <td>176.130005</td>\n",
+       "      <td>179.619995</td>\n",
+       "      <td>179.619995</td>\n",
+       "      <td>43919800.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1 unstoppable stock that could join microsoft ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1744</th>\n",
+       "      <td>1744</td>\n",
+       "      <td>2024-04-26</td>\n",
+       "      <td>169.880005</td>\n",
+       "      <td>171.339996</td>\n",
+       "      <td>169.179993</td>\n",
+       "      <td>169.300003</td>\n",
+       "      <td>169.070679</td>\n",
+       "      <td>44838400.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1 unstoppable stock that could join microsoft ...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1745</th>\n",
+       "      <td>1745</td>\n",
+       "      <td>2024-04-26</td>\n",
+       "      <td>168.850006</td>\n",
+       "      <td>172.119995</td>\n",
+       "      <td>166.369995</td>\n",
+       "      <td>168.289993</td>\n",
+       "      <td>168.289993</td>\n",
+       "      <td>109815700.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>tesla investor touts ev giants billionsmile le...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1746 rows × 11 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      index        Date        Open        High         Low       Close  \\\n",
+       "0         0  2022-01-03  177.830002  182.880005  177.710007  182.009995   \n",
+       "1         1  2022-01-03  382.583344  400.356659  378.679993  399.926666   \n",
+       "2         2  2022-01-03  167.550003  170.703506  166.160507  170.404495   \n",
+       "3         3  2022-01-04  182.630005  182.940002  179.119995  179.699997   \n",
+       "4         4  2022-01-04  396.516663  402.666656  374.350006  383.196655   \n",
+       "...     ...         ...         ...         ...         ...         ...   \n",
+       "1741   1741  2024-04-25  169.529999  170.610001  168.149994  169.889999   \n",
+       "1742   1742  2024-04-25  169.679993  173.919998  166.320007  173.669998   \n",
+       "1743   1743  2024-04-26  177.800003  180.820007  176.130005  179.619995   \n",
+       "1744   1744  2024-04-26  169.880005  171.339996  169.179993  169.300003   \n",
+       "1745   1745  2024-04-26  168.850006  172.119995  166.369995  168.289993   \n",
+       "\n",
+       "       Adj Close       Volume  Label  Company  \\\n",
+       "0     179.481140  104487900.0    1.0      1.0   \n",
+       "1     399.926666  103931400.0    1.0      3.0   \n",
+       "2     170.404495   63520000.0    1.0      2.0   \n",
+       "3     177.203217   99310400.0    0.0      1.0   \n",
+       "4     383.196655  100248300.0    0.0      3.0   \n",
+       "...          ...          ...    ...      ...   \n",
+       "1741  169.659882   50558300.0    1.0      1.0   \n",
+       "1742  173.669998   49249400.0    0.0      2.0   \n",
+       "1743  179.619995   43919800.0    1.0      2.0   \n",
+       "1744  169.070679   44838400.0    0.0      1.0   \n",
+       "1745  168.289993  109815700.0    0.0      3.0   \n",
+       "\n",
+       "                                            clean_title  \n",
+       "0     what a strong apple 2022 product line up could...  \n",
+       "1     lg energy solution starts taking orders for wh...  \n",
+       "2     updating 2021 calls while suggesting strategic...  \n",
+       "3     is 3 trillion just the beginning for apple app...  \n",
+       "4     tesla opens showroom in xinjiang the chinese r...  \n",
+       "...                                                 ...  \n",
+       "1741  this spectacular vanguard etf could turn 250 p...  \n",
+       "1742  if you invested 10000 in amazon 10 years ago t...  \n",
+       "1743  1 unstoppable stock that could join microsoft ...  \n",
+       "1744  1 unstoppable stock that could join microsoft ...  \n",
+       "1745  tesla investor touts ev giants billionsmile le...  \n",
+       "\n",
+       "[1746 rows x 11 columns]"
+      ]
+     },
+     "execution_count": 66,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df4.reset_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "61616d5d-735f-4734-b22f-eb173fcd0dd8",
    "metadata": {},
    "outputs": [],
    "source": []
