--- a/Finance_Project/Sentiment-Analysis - Copy.ipynb
+++ b/Finance_Project/Sentiment-Analysis - Copy.ipynb
@@ -2415,6 +2415,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 189,
+   "id": "0bdf50ae-035a-4a87-9e81-51eac142d3c6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df4.to_csv(\"df4.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 45,
    "id": "a451a73f-e4b0-49ff-9f34-a075ebec0f5a",
    "metadata": {},
@@ -2999,6 +3009,246 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 188,
+   "id": "48a3fc6d-422f-49bf-9c53-b87324342306",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Date</th>\n",
+       "      <th>Open</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Close</th>\n",
+       "      <th>Adj Close</th>\n",
+       "      <th>Volume</th>\n",
+       "      <th>Label</th>\n",
+       "      <th>Company</th>\n",
+       "      <th>clean_title</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2022-01-03</td>\n",
+       "      <td>177.830002</td>\n",
+       "      <td>182.880005</td>\n",
+       "      <td>177.710007</td>\n",
+       "      <td>182.009995</td>\n",
+       "      <td>179.481140</td>\n",
+       "      <td>104487900.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>strong apple 2022 product line could look like...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2022-01-03</td>\n",
+       "      <td>382.583344</td>\n",
+       "      <td>400.356659</td>\n",
+       "      <td>378.679993</td>\n",
+       "      <td>399.926666</td>\n",
+       "      <td>399.926666</td>\n",
+       "      <td>103931400.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>lg energy solution start taking order could so...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2022-01-03</td>\n",
+       "      <td>167.550003</td>\n",
+       "      <td>170.703506</td>\n",
+       "      <td>166.160507</td>\n",
+       "      <td>170.404495</td>\n",
+       "      <td>170.404495</td>\n",
+       "      <td>63520000.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>updating 2021 call suggesting strategic positi...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2022-01-04</td>\n",
+       "      <td>182.630005</td>\n",
+       "      <td>182.940002</td>\n",
+       "      <td>179.119995</td>\n",
+       "      <td>179.699997</td>\n",
+       "      <td>177.203217</td>\n",
+       "      <td>99310400.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>3 trillion beginning apple apple car come prep...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2022-01-04</td>\n",
+       "      <td>396.516663</td>\n",
+       "      <td>402.666656</td>\n",
+       "      <td>374.350006</td>\n",
+       "      <td>383.196655</td>\n",
+       "      <td>383.196655</td>\n",
+       "      <td>100248300.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>tesla open showroom xinjiang chinese region as...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1741</th>\n",
+       "      <td>2024-04-25</td>\n",
+       "      <td>169.529999</td>\n",
+       "      <td>170.610001</td>\n",
+       "      <td>168.149994</td>\n",
+       "      <td>169.889999</td>\n",
+       "      <td>169.659882</td>\n",
+       "      <td>50558300.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>spectacular vanguard etf could turn 250 per mo...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1742</th>\n",
+       "      <td>2024-04-25</td>\n",
+       "      <td>169.679993</td>\n",
+       "      <td>173.919998</td>\n",
+       "      <td>166.320007</td>\n",
+       "      <td>173.669998</td>\n",
+       "      <td>173.669998</td>\n",
+       "      <td>49249400.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>invested 10000 amazon 10 year ago much would t...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1743</th>\n",
+       "      <td>2024-04-26</td>\n",
+       "      <td>177.800003</td>\n",
+       "      <td>180.820007</td>\n",
+       "      <td>176.130005</td>\n",
+       "      <td>179.619995</td>\n",
+       "      <td>179.619995</td>\n",
+       "      <td>43919800.0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>1 unstoppable stock could join microsoft apple...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1744</th>\n",
+       "      <td>2024-04-26</td>\n",
+       "      <td>169.880005</td>\n",
+       "      <td>171.339996</td>\n",
+       "      <td>169.179993</td>\n",
+       "      <td>169.300003</td>\n",
+       "      <td>169.070679</td>\n",
+       "      <td>44838400.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1 unstoppable stock could join microsoft apple...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1745</th>\n",
+       "      <td>2024-04-26</td>\n",
+       "      <td>168.850006</td>\n",
+       "      <td>172.119995</td>\n",
+       "      <td>166.369995</td>\n",
+       "      <td>168.289993</td>\n",
+       "      <td>168.289993</td>\n",
+       "      <td>109815700.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>3.0</td>\n",
+       "      <td>tesla investor tout ev giant billionsmile leap...</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1746 rows × 10 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            Date        Open        High         Low       Close   Adj Close  \\\n",
+       "0     2022-01-03  177.830002  182.880005  177.710007  182.009995  179.481140   \n",
+       "1     2022-01-03  382.583344  400.356659  378.679993  399.926666  399.926666   \n",
+       "2     2022-01-03  167.550003  170.703506  166.160507  170.404495  170.404495   \n",
+       "3     2022-01-04  182.630005  182.940002  179.119995  179.699997  177.203217   \n",
+       "4     2022-01-04  396.516663  402.666656  374.350006  383.196655  383.196655   \n",
+       "...          ...         ...         ...         ...         ...         ...   \n",
+       "1741  2024-04-25  169.529999  170.610001  168.149994  169.889999  169.659882   \n",
+       "1742  2024-04-25  169.679993  173.919998  166.320007  173.669998  173.669998   \n",
+       "1743  2024-04-26  177.800003  180.820007  176.130005  179.619995  179.619995   \n",
+       "1744  2024-04-26  169.880005  171.339996  169.179993  169.300003  169.070679   \n",
+       "1745  2024-04-26  168.850006  172.119995  166.369995  168.289993  168.289993   \n",
+       "\n",
+       "           Volume  Label  Company  \\\n",
+       "0     104487900.0      1      1.0   \n",
+       "1     103931400.0      1      3.0   \n",
+       "2      63520000.0      1      2.0   \n",
+       "3      99310400.0      0      1.0   \n",
+       "4     100248300.0      0      3.0   \n",
+       "...           ...    ...      ...   \n",
+       "1741   50558300.0      1      1.0   \n",
+       "1742   49249400.0      0      2.0   \n",
+       "1743   43919800.0      1      2.0   \n",
+       "1744   44838400.0      0      1.0   \n",
+       "1745  109815700.0      0      3.0   \n",
+       "\n",
+       "                                            clean_title  \n",
+       "0     strong apple 2022 product line could look like...  \n",
+       "1     lg energy solution start taking order could so...  \n",
+       "2     updating 2021 call suggesting strategic positi...  \n",
+       "3     3 trillion beginning apple apple car come prep...  \n",
+       "4     tesla open showroom xinjiang chinese region as...  \n",
+       "...                                                 ...  \n",
+       "1741  spectacular vanguard etf could turn 250 per mo...  \n",
+       "1742  invested 10000 amazon 10 year ago much would t...  \n",
+       "1743  1 unstoppable stock could join microsoft apple...  \n",
+       "1744  1 unstoppable stock could join microsoft apple...  \n",
+       "1745  tesla investor tout ev giant billionsmile leap...  \n",
+       "\n",
+       "[1746 rows x 10 columns]"
+      ]
+     },
+     "execution_count": 188,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df4"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 57,
    "id": "ec36b782-dd8a-4d21-8dd9-e900489bb6ff",
    "metadata": {},
@@ -3266,23 +3516,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 187,
    "id": "8bac48de-16db-403a-967f-c026ba7f2adf",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(1746,)"
+       "300"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 187,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pre_trained_word2vec.shape"
+    "len(pre_trained_word2vec[0])"
    ]
   },
   {
