--- a/Finance_Project/Price-Prediction.ipynb
+++ b/Finance_Project/Price-Prediction.ipynb
@@ -2471,7 +2471,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pre_trained_word2vec=pd.read_pickle(\"pre_trained_word2vec.pkl\")"
+    "# pre_trained_word2vec=pd.read_pickle(\"pre_trained_word2vec.pkl\")"
    ]
   },
   {
@@ -2481,7 +2481,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pre_trained_word2vec=pd.DataFrame(pre_trained_word2vec)"
+    "# pre_trained_word2vec=pd.DataFrame(pre_trained_word2vec)"
    ]
   },
   {
@@ -2491,7 +2491,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "final_df=pd.concat([df4[req_col],features_df],axis=1)"
+    "# final_df=pd.concat([df4[req_col],features_df],axis=1)"
    ]
   },
   {
@@ -2708,7 +2708,7 @@
     }
    ],
    "source": [
-    "final_df.head()"
+    "# final_df.head()"
    ]
   },
   {
@@ -2740,8 +2740,8 @@
     }
    ],
    "source": [
-    "final_y=final_df[\"Close\"]\n",
-    "final_y"
+    "# final_y=final_df[\"Close\"]\n",
+    "# final_y"
    ]
   },
   {
@@ -2751,7 +2751,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "final_df=final_df.drop(\"Close\",axis=1)"
+    "# final_df=final_df.drop(\"Close\",axis=1)"
    ]
   },
   {
@@ -2761,8 +2761,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_test=final_df[-test_size:]\n",
-    "y_test=final_y[-test_size:]"
+    "# X_test=final_df[-test_size:]\n",
+    "# y_test=final_y[-test_size:]"
    ]
   },
   {
@@ -3147,8 +3147,8 @@
     }
    ],
    "source": [
-    "comb_train=pd.concat([final_df.iloc[:-test_size,:],final_y[:-test_size]],axis=1)\n",
-    "comb_train"
+    "# comb_train=pd.concat([final_df.iloc[:-test_size,:],final_y[:-test_size]],axis=1)\n",
+    "# comb_train"
    ]
   },
   {
@@ -3533,8 +3533,8 @@
     }
    ],
    "source": [
-    "shuffled_df = comb_train.sample(frac=1, random_state=42)\n",
-    "shuffled_df"
+    "# shuffled_df = comb_train.sample(frac=1, random_state=42)\n",
+    "# shuffled_df"
    ]
   },
   {
@@ -3544,18 +3544,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train=shuffled_df.drop(\"Close\",axis=1)\n",
-    "y_train=shuffled_df[\"Close\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 218,
-   "id": "72024c05-ccc1-4037-a241-319c579a28d3",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X_train.columns=X_train.columns.astype(str)"
+    "# X_train=shuffled_df.drop(\"Close\",axis=1)\n",
+    "# y_train=shuffled_df[\"Close\"]"
    ]
   },
   {
@@ -3565,8 +3555,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train=scaler.fit_transform(X_train)\n",
-    "X_test=scaler.transform(X_test)"
+    "# X_train=scaler.fit_transform(X_train)\n",
+    "# X_test=scaler.transform(X_test)"
    ]
   },
   {
@@ -3590,8 +3580,8 @@
     }
    ],
    "source": [
-    "svm_reg = SVR(kernel='linear', C=1, gamma='scale')\n",
-    "svm_reg.fit(X_train, y_train)"
+    "# svm_reg = SVR(kernel='linear', C=1, gamma='scale')\n",
+    "# svm_reg.fit(X_train, y_train)"
    ]
   },
   {
@@ -3601,7 +3591,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_pred = svm_reg.predict(X_test)"
+    "# y_pred = svm_reg.predict(X_test)"
    ]
   },
   {
@@ -3622,7 +3612,7 @@
     }
    ],
    "source": [
-    "mean_squared_error(y_test, y_pred)"
+    "# mean_squared_error(y_test, y_pred)"
    ]
   },
   {
@@ -3643,7 +3633,7 @@
     }
    ],
    "source": [
-    "r2_score(y_test, y_pred)"
+    "# r2_score(y_test, y_pred)"
    ]
   },
   {
@@ -3653,7 +3643,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "yyy=svm_reg.predict(X_train)"
+    "# yyy=svm_reg.predict(X_train)"
    ]
   },
   {
@@ -3674,7 +3664,7 @@
     }
    ],
    "source": [
-    "mean_squared_error(y_train, yyy)"
+    "# mean_squared_error(y_train, yyy)"
    ]
   }
  ],
